--- a/extension/partials/header.html
+++ b/extension/partials/header.html
@@ -2,5 +2,5 @@
       <img src="img/1406922645_icon-ios7-trash-outline.png" id="logo" />
       <span id="title">{{manifest.name}}</span>
       <span id="subtitle">{{manifest.description}}</span>
-      <span id="headExtra">Versjon {{manifest.version}}</span>
+      <span id="headExtra">Version {{manifest.version}}</span>
     </div>
