--- a/extension/tabs.css
+++ b/extension/tabs.css
@@ -21,7 +21,7 @@
 
     background-color: #eee;
 
-    margin-right: 10px;
+    margin-right: 5px;
 
     border-top: 1px solid #999;
     border-right: 1px solid #999;
@@ -48,6 +48,7 @@
     padding: 10px;
     color: #000;
     text-decoration: none;
+    border-bottom-style: none;
 }
 
 .tabs-menu .current a
