--- a/extension/partials/header.html
+++ b/extension/partials/header.html
@@ -1,5 +1,5 @@
     <div id="header" ng-controller="AboutController">
-      <img src="img/1406922645_icon-ios7-trash-outline.png" id="logo" />
+      <img src="img/trash-64.png" id="logo" />
       <span id="title">{{manifest.name}}</span>
       <span id="subtitle">{{manifest.description}}</span>
       <span id="headExtra">Version {{manifest.version}}</span>
