--- a/extension/common.css
+++ b/extension/common.css
@@ -230,3 +230,17 @@ input[type=button]:hover
   margin-top: 0px;
   padding-top: 0px;
 }
+
+.code
+{
+  font-size: 8pt;
+  padding: 0px 4px 0px 4px;
+  font-family: "Courier New", "Courier";
+  background-color: #f8f8f8;
+  border: 1px dotted #333;
+}
+
+.astDomNode:hover
+{
+  background-color: red;
+}
